fixed fancybox shifting

--- a/source/jquery.fancybox.css
+++ b/source/jquery.fancybox.css
@@ -165,23 +165,22 @@
 /* Overlay helper */
 
 .fancybox-lock {
-    overflow: hidden !important;
-    width: auto;
+
 }
 
 .fancybox-lock body {
-    overflow: hidden !important;
+
 }
 
 .fancybox-lock-test {
-    overflow-y: hidden !important;
+
 }
 
 .fancybox-overlay {
 	position: absolute;
 	top: 0;
 	left: 0;
-	overflow: hidden;
+
 	display: none;
 	z-index: 8010;
 	background: url('fancybox_overlay.png');
@@ -194,8 +193,7 @@
 }
 
 .fancybox-lock .fancybox-overlay {
-	overflow: auto;
-	overflow-y: scroll;
+
 }
 
 /* Title helper */
